# dihook

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
dihook/: __init__.py  dihook.py  sender.py
